# restswiftly

./: .gitignore  Cargo.toml  README.md
restswiftly/src/: args.rs
restswiftly/src/generator/: mod.rs  path.rs  query.rs  test.rs
retroswift/: Cargo.toml
retroswift/src/: args.rs  main.rs
retroswift/src/generator/: errors.rs  mod.rs  parameters.rs  path.rs  query.rs  test.rs
samples/: AllMethods.swift  Body.swift  Combined.swift  Failing.swift  FormEncoding.swift  Headers.swift  MultipartEncoding.swift  Path.swift  QueryParameter.swift  Return.swift  Simple.swift
samples/outputs/: AllMethodsImpl.swift  BodyImpl.swift  CombinedImpl.swift  FormEncodingImpl.swift  HeadersImpl.swift  MultipartEncodingImpl.swift  PathImpl.swift  QueryParameterImpl.swift  ReturnImpl.swift  SimpleImpl.swift
swift-generator/: Cargo.toml
swift-generator/src/: class.rs  code.rs  field.rs  function.rs  lib.rs  macros.rs  parameter.rs
swift-lib/: Chain.swift  FormEncoding.swift  Interceptor.swift  MultipartEncoder.swift
swift-parser/: Cargo.toml
swift-parser/src/: errors.rs  lib.rs  parsing.rs  test.rs  tokenizing.rs
