[package]
name = "retroswift"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.58"
clap = { version = "3.2.16", features = ["derive"] }
env_logger = "0.9.0"
log = "0.4.17"
swift-generator = { path = "../swift-generator" }
swift-parser = { path = "../swift-parser" }
thiserror = "1.0.32"
